test/dependencyLoop3.slq

def solve[n:!â„•](qs:ğ”¹^n)mfree:ğ”¹^n{
	seen:=0:ğ”¹;
	for i in [1..n){
		__show(__query("dep",seen));
		bit:=dup(qs[n-i]);
		if !seen&&bit{
			for j in [0..n-i){
				qs[j]:=H(qs[j]);
			}
		}
		forget(bit=qs[n-i]);
		seen|=qs[n-i]; /// error
		__show(__query("dep",seen));
	}
	forget(seen); /// error
	return qs;
}
